@@ -41,126 +41,144 @@ if( file_exists("./logos/color_select.inc") ) include("./logos/color_select.inc"
 ?>
 
 <!-- ============================================================= -->
+
 <?php decoration_window_start("By Michael Gorniak (7 images)", "", "", 0); ?>
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Michael_Gorniak/index.php');
-?>" class="nohilight"><img src="logos/Michael_Gorniak/fvwm-logos-overview.png"
-width="213" height="358" border="0" vspace="0" hspace="0" class="centered"></a>
+<a href="<?php echo conv_link_target('logos/Michael_Gorniak/index.php'); ?>">
+
+<p class="centered"><img src="logos/Michael_Gorniak/fvwm-logos-overview.png"
+width="213" height="358" border="0" vspace="0" hspace="0">
+
+<p>More...
+</a>
 
 <?php decoration_window_end(); ?>
 
 <!-- ============================================================= -->
+
 <?php decoration_window_start("By David Drummond (1 image)", "", "", 0); ?>
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/David_Drummond/index.php');
-?>" class="nohilight"><img src="logos/David_Drummond/yellow_flower_fvwm_logo.png"
-width="300" height="180" border="0" vspace="0" hspace="0"></a>
+<a href="<?php echo conv_link_target('logos/David_Drummond/index.php'); ?>">
+
+<p class="centered"><img src="logos/David_Drummond/yellow_flower_fvwm_logo.png"
+width="300" height="180" border="0" vspace="0" hspace="0">
+
+<p>More...
+</a>
 
 <?php decoration_window_end(); ?>
 
 <!-- ============================================================= -->
+
 <?php decoration_window_start("By Ian Remmler (5 images)", "", "", 0); ?>
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Ian_Remmler/index.php');
-?>" class="nohilight"><img src="logos/Ian_Remmler/3d.png"
-width="184" height="213" border="0" vspace="0" hspace="0" class="centered"></a>
+<a href="<?php echo conv_link_target('logos/Ian_Remmler/index.php');?>">
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Ian_Remmler/index.php');
-?>" class="nohilight"><img src="logos/Ian_Remmler/contrast.png"
-width="269" height="89" border="0" vspace="0" hspace="0" class="centered"></a>
+<p class="centered"><img src="logos/Ian_Remmler/3d.png"
+width="184" height="213" border="0" vspace="0" hspace="0">
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Ian_Remmler/index.php');
-?>" class="nohilight"><img src="logos/Ian_Remmler/future.png"
-width="297" height="98" border="0" vspace="0" hspace="0" class="centered"></a>
+<p class="centered"><img src="logos/Ian_Remmler/contrast.png"
+width="269" height="89" border="0" vspace="0" hspace="0">
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Ian_Remmler/index.php');
-?>" class="nohilight"><img src="logos/Ian_Remmler/groovy-3d.png"
-width="262" height="121" border="0" vspace="0" hspace="0" class="centered"></a>
+<p class="centered"><img src="logos/Ian_Remmler/future.png"
+width="297" height="98" border="0" vspace="0" hspace="0">
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Ian_Remmler/index.php');
-?>" class="nohilight"><img src="logos/Ian_Remmler/block.png"
-width="130" height="161" border="0" vspace="0" hspace="0" class="centered"></a>
+<p class="centered"><img src="logos/Ian_Remmler/groovy-3d.png"
+width="262" height="121" border="0" vspace="0" hspace="0">
+
+<p class="centered"><img src="logos/Ian_Remmler/block.png"
+width="130" height="161" border="0" vspace="0" hspace="0">
+
+<p>More...
+</a>
 
 <?php decoration_window_end(); ?>
 
 <!-- ============================================================= -->
+
 <?php decoration_window_start("By Tian (3 images)", "", "", 0); ?>
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Tian/index.php');
-?>" class="nohilight"><img src="logos/Tian/logo_shaded.png"
-width="399" height="215" border="0" vspace="0" hspace="0"></a>
+<a href="<?php echo conv_link_target('logos/Tian/index.php'); ?>">
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Tian/index.php');
-?>" class="nohilight"><img src="logos/Tian/logo_sunny.png"
-width="266" height="143" border="0" vspace="0" hspace="0"></a>
+<p class="centered"><img src="logos/Tian/logo_shaded.png"
+width="399" height="215" border="0" vspace="0" hspace="0">
 
-<?php decoration_window_end(); ?>
+<p class="centered"><img src="logos/Tian/logo_sunny.png"
+width="266" height="143" border="0" vspace="0" hspace="0">
 
-<!-- ============================================================= -->
-<?php decoration_window_start("By Phil Harper (7 + 4 + 1 images)", "", "", 0); ?>
-
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Phil_Harper/index.php');
-?>" class="nohilight"><img src="logos/Phil_Harper/feeble.png"
-width="199" height="191" border="0" vspace="0" hspace="0" align="middle"></a>
-
-<a href="<?php echo conv_link_target('logos/Phil_Harper/index.php');
-?>" class="nohilight"><img src="logos/Phil_Harper/tiger2.png"
-width="270" height="246" border="0" vspace="0" hspace="0" align="middle"></a>
-
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Phil_Harper/index.php');
-?>" class="nohilight"><img src="logos/Phil_Harper/tigerskin6.png"
-width="239" height="67" border="0" vspace="0" hspace="0" align="middle"></a>
+<p>More...
+</a>
 
 <?php decoration_window_end(); ?>
 
 <!-- ============================================================= -->
+
+<?php decoration_window_start("By Phil Harper (8 images + 4 bg)", "", "", 0); ?>
+
+<a href="<?php echo conv_link_target('logos/Phil_Harper/index.php'); ?>">
+
+<p class="centered"><img src="logos/Phil_Harper/feeble.png"
+width="199" height="191" border="0" vspace="0" hspace="0" align="middle">
+
+<img src="logos/Phil_Harper/tiger2.png"
+width="270" height="246" border="0" vspace="0" hspace="0" align="middle">
+
+<p class="centered"><img src="logos/Phil_Harper/fvwmpower2-overview.png"
+width="146" height="91" border="0" vspace="0" hspace="0" align="middle">
+
+<img src="logos/Phil_Harper/tigerskin6.png"
+width="239" height="67" border="0" vspace="0" hspace="0" align="middle">
+
+<p>More...
+</a>
+
+<?php decoration_window_end(); ?>
+
+<!-- ============================================================= -->
+
 <?php decoration_window_start("By Anna MacLachlan (7 images)", "", "", 0); ?>
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Anna_MacLachlan/index.php');
-?>" class="nohilight"><img src="logos/Anna_MacLachlan/jungle-overview.png"
-width="290" height="250" border="0" vspace="0" hspace="0"></a>
+<a href="<?php echo conv_link_target('logos/Anna_MacLachlan/index.php'); ?>">
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Anna_MacLachlan/index.php');
-?>" class="nohilight"><img src="logos/Anna_MacLachlan/clearly-fvwm-small.png"
-width="183" height="71" border="0" vspace="0" hspace="0"></a>
+<p class="centered"><img src="logos/Anna_MacLachlan/jungle-overview.png"
+width="290" height="250" border="0" vspace="0" hspace="0">
+
+<p class="centered"><img src="logos/Anna_MacLachlan/clearly-fvwm-small.png"
+width="183" height="71" border="0" vspace="0" hspace="0">
+
+<p>More...
+</a>
 
 <?php decoration_window_end(); ?>
 
 <!-- ============================================================= -->
+
 <?php decoration_window_start("By Coji Morishita (8 images)", "", "", 0); ?>
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Coji_Morishita/index.php');
-?>" class="nohilight"><img src="logos/Coji_Morishita/fvwm_sbanner_blue.png"
-width="335" height="48" border="0" hspace="0" vspace="0"></a>
+<a href="<?php echo conv_link_target('logos/Coji_Morishita/index.php'); ?>">
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Coji_Morishita/index.php');
-?>" class="nohilight"><img src="logos/Coji_Morishita/fvwm_sym_logo.png"
-width="240" height="200" border="0" hspace="0" vspace="0"></a>
+<p class="centered"><img src="logos/Coji_Morishita/fvwm_sbanner_blue.png"
+width="335" height="48" border="0" hspace="0" vspace="0">
+
+<p class="centered"><img src="logos/Coji_Morishita/fvwm_sym_logo.png"
+width="240" height="200" border="0" hspace="0" vspace="0">
+
+<p>More...
+</a>
 
 <?php decoration_window_end(); ?>
 
 <!-- ============================================================= -->
+
 <?php decoration_window_start("By Scott Smedley (6 images)", "", "", 0); ?>
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Scott_Smedley/index.php');
-?>" class="nohilight"><img src="logos/Scott_Smedley/fvwm-overview.png"
-border="0" hspace="0" vspace="0"></a>
+<a href="<?php echo conv_link_target('logos/Scott_Smedley/index.php'); ?>">
+
+<p class="centered"><img src="logos/Scott_Smedley/fvwm-overview.png"
+width="300" height="400" border="0" hspace="0" vspace="0">
+
+<p>More...
+</a>
 
 <?php decoration_window_end(); ?>
 
@@ -168,9 +186,13 @@ border="0" hspace="0" vspace="0"></a>
 
 <?php decoration_window_start("By Felix E. Klee (8 images)", "", "", 0); ?>
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Felix_E_Klee/index.php');
-?>" class="nohilight"><img src="logos/Felix_E_Klee/logos-overview.png" width="255" height="564" border="0" vspace="0" hspace="0"></a>
+<a href="<?php echo conv_link_target('logos/Felix_E_Klee/index.php'); ?>">
+
+<p class="centered"><img src="logos/Felix_E_Klee/logos-overview.png"
+width="255" height="564" border="0" vspace="0" hspace="0">
+
+<p>More...
+</a>
 
 <?php decoration_window_end(); ?>
 
@@ -178,9 +200,13 @@ border="0" hspace="0" vspace="0"></a>
 
 <?php decoration_window_start("By Stefan Bergmeier (2 images)", "", "", 0); ?>
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Stefan_Bergmeier/index.php');
-?>" class="nohilight"><img src="logos/Stefan_Bergmeier/logos-overview.png" width="300" height="150" border="0" vspace="0" hspace="0"></a>
+<a href="<?php echo conv_link_target('logos/Stefan_Bergmeier/index.php'); ?>">
+
+<p class="centered"><img src="logos/Stefan_Bergmeier/logos-overview.png"
+width="300" height="150" border="0" vspace="0" hspace="0">
+
+<p>More...
+</a>
 
 <?php decoration_window_end(); ?>
 
@@ -188,9 +214,13 @@ border="0" hspace="0" vspace="0"></a>
 
 <?php decoration_window_start("By Aric Campling (3 images)", "", "", 0); ?>
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Aric_Campling/index.php');
-?>" class="nohilight"><img src="logos/Aric_Campling/logos-overview.png" width="300" height="180" border="0" vspace="0" hspace="0"></a>
+<a href="<?php echo conv_link_target('logos/Aric_Campling/index.php'); ?>">
+
+<p class="centered"><img src="logos/Aric_Campling/logos-overview.png"
+width="300" height="180" border="0" vspace="0" hspace="0">
+
+<p>More...
+</a>
 
 <?php decoration_window_end(); ?>
 
@@ -198,10 +228,16 @@ border="0" hspace="0" vspace="0"></a>
 
 <?php decoration_window_start("By Ludovic Recourchines (3 images)", "", "", 0); ?>
 
-<p class="centered">
-<a href="<?php echo conv_link_target('logos/Ludovic_Recourchines/index.php');
-?>" class="nohilight"><img src="logos/Ludovic_Recourchines/logos-overview.png" width="200" height="240" border="0" vspace="0" hspace="0"></a>
+<a href="<?php echo conv_link_target('logos/Ludovic_Recourchines/index.php'); ?>">
+
+<p class="centered"><img src="logos/Ludovic_Recourchines/logos-overview.png"
+width="200" height="240" border="0" vspace="0" hspace="0">
+
+<p>More...
+</a>
 
 <?php decoration_window_end(); ?>
+
+<!-- ============================================================= -->
 
 <p>Return to <a href="<?php echo conv_link_target('./');?>">index</a>.</p>
